@@ -170,6 +170,7 @@ mInitialized(FALSE),
 m_pScriptableObject(NULL),
 m_pScriptableObjectControls(NULL),
 mWindow(0),
+windowless(FALSE),
 playlist(NULL),
 player_launched(FALSE),
 connection(NULL),
